Thu Jul 28 22:51:27 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* backport r32723 from trunk.

	* ext/openssl/ossl_cipher.c (ossl_cipher_initialize): Avoid possible
	  SEGV from AES encryption/decryption. Processing data by
	  Cipher#update without initializing key (meaningless usage of Cipher
	  object since we don't offer a way to export a key) could cause SEGV.
	  
	  In OpenSSL, the EVP which has EVP_CIPH_RAND_KEY flag (such as DES3)
	  allows uninitialized key, but other EVPs (such as AES) does not
	  allow it. Calling EVP_CipherUpdate() without initializing key causes
	  SEGV so we set the data filled with "\0" as the key by default. See
	  #2768.

	* test/openssl/test_cipher.rb: test it.

Thu Jul 28 04:53:31 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/delegate.rb:  Move file-level documentation to the appropriate
	  classes.

Thu Jul 28 00:33:47 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/fileutils/test_fileutils.rb: add OpenBSD case.
	  patched by Jeremy Evans [ruby-core:38530] see #5097

	* test/ruby/test_process.rb: ditto.

Wed Jul 27 17:59:46 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/missing.h: define __syscall if the platform has
	  __syscall in the library but doesn't define it in headers
	  for example Mac OS X.

Wed Jul 27 15:39:14 2011  Eric Hodel  <drbrain@segment7.net>

	* object.c:  Add usage documentation for BasicObject.  Based on patch
	  by Thomas Sawyer.  [Ruby 1.9 - Bug #5067]

Wed Jul 27 12:24:17 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/uninstaller.rb:  Add missing require and update
	  messaging to avoid confusion with uninstall --format-executable.
	  [Ruby 1.9 - Bug #4062]

Wed Jul 27 10:47:57 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems 1.8.6.1.

Wed Jul 27 10:04:06 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* backport r32690 from trunk.

	* test/openssl/test_pkcs12.rb: Add test and intermediate certificates.