@@ -1,3 +1,10 @@
+Thu Jul 28 23:36:28 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>
+
+	* ext/fiddle/closure.c (callback): use rb_ary_tmp_new() instead of
+	  xmalloc() to allocate an array for arguments of callback procedure,
+	  to prevent arguments from being swept by GC. [ruby-core:38546]
+	  [Bug #4929]
+
 Thu Jul 28 22:51:27 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>
 
 	* backport r32723 from trunk.
